md-splice/tests/snapshots/cli__i2_replace_output.snap
---
source: tests/cli.rs
expression: output_content
---
# Title

**This is the new content.**

Another paragraph.
