md-splice/tests/snapshots/cli__li1_replace_list_item.snap
---
source: tests/cli.rs
expression: output_content
---
# A List

 - Item One
 - Item 2 (Replaced)
 - Item Three
