md-splice/tests/snapshots/cli__li2_insert_list_item.snap
---
source: md-splice/tests/cli.rs
expression: output_content
---
# A List

- Item One
- Item Two
- Item 2.5 (Inserted)
- Item Three
